--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
     <main id="main"></main>
 
 <script>
-    function create_from_template(template, props) {
+    function subscribe_component_to_data(template, props) {
         const template_copy = document.importNode(template.content, true);
         const allvs = template_copy.querySelectorAll("[v]");
         allvs.forEach(vItem => {
@@ -53,7 +53,7 @@
 
         if ('key' in props) {
             template_copy.firstElementChild.setAttribute("subscription-key", props['key']);
-            subscriptions[props['key']] = props;
+            subscriptions[props['subscription-key']] = props;
         }
         // holder.appendChild(template_copy);
 
@@ -92,9 +92,6 @@
         const subscribed_elements = document.querySelectorAll(`[subscription-key=${subscription_key}]`);
         data[key] = new_data;
         const props = {[key]: new_data}
-        console.log({data})
-        console.log({subscribed_elements})
-        console.log({data})
         //still in the works as 'props' refelects the name that the change_values function will use to represent it
         subscribed_elements.forEach(element => {
             change_values(element, props);
@@ -104,21 +101,28 @@
     const subscriptions = {};
 
     const people = [
-        {name: 'John', age: 42, key: "kerry"},
-        {name: 'jp', age: 13, key: "jon"},
-        {name: 'brad', age: 32, key: "dufe"},
-        {name: 'gt', age: 56, key: "lego"},
+        {name: 'John', age: 42, "subscription-key": "kerry"},
+        {name: 'jp', age: 13, "subscription-key": "jon"},
+        {name: 'brad', age: 32, "subscription-key": "dufe"},
+        {name: 'gt', age: 56, "subscription-key": "lego"},
     ];
 
-    const holder = document.getElementById('holder');
-    const main = document.getElementById('main');
-    const person_template = document.getElementById('person_template');
 
-    people.forEach(person => {
-        const pi = create_from_template(person_template, person);
-        main.appendChild(pi);
-        // subscribe(pi, person);
-    });
+
+
+    //high level abstraction
+    function get_family_subscribtion(element_householde_leader, data_householde_leader, template){
+        console.log(main)
+        console.log(people)
+        
+        data_householde_leader.forEach(data => {
+            const pi = subscribe_component_to_data(template, data);
+            element_householde_leader.appendChild(pi);
+});
+
+
+}
+get_family_subscribtion(main, people, person_template)
 </script>
 </body>
 </html>
