--- a/main.html
+++ b/main.html
@@ -52,10 +52,20 @@
         </div>
     </template>
 
+
+    <template id="listItem_template">
+        
+        <li v="textContent-listItem"></li>
+    </template>
+
+
     <template id="person_template">
         <div class="person">
-            <div v="textContent-name" subscription="none"></div>
-            <div v="textContent-age" subscription="none"></div>
+            <div v="textContent-name" ></div>
+            <div v="textContent-age" ></div>
+            <ol btl="listItem_template-list">
+
+            </ol>
             <button style="background: linear-gradient(90deg, lightgreen, green);" 
                 onclick="this.parentNode.remove()">remove</button>
             <button class="x">X</button>
@@ -66,6 +76,7 @@
 
 <script>
     function subscribe_component_to_data(template, props) {
+        console.log("top of subscribe_component_to_data", {template}, {props})
         const template_copy = document.importNode(template.content, true);
         const allvs = template_copy.querySelectorAll("[v]");
         allvs.forEach(vItem => {
@@ -77,7 +88,19 @@
             template_copy.firstElementChild.setAttribute("subscription-key", props['subscription-key']);
             subscriptions[props['subscription-key']] = props;
         }
-        // holder.appendChild(template_copy);
+        const allbtls = template_copy.querySelectorAll("[btl]");
+        
+        allbtls.forEach(btl => {
+            const [where, what] = btl.getAttribute("btl").split("-")
+            const baby_template = document.getElementById(where)
+            console.log({baby_template})
+            props[what].forEach(props => {
+                console.log({props})
+                btl.appendChild(subscribe_component_to_data(baby_template, props))
+
+            })
+        });
+
 
         return template_copy;
     }
@@ -99,9 +122,12 @@
 
     function change_values(element, props) {
         console.log('in change_values', {props})
+        console.log(element)
         const allvs = element.querySelectorAll("[v]");
+        console.log({allvs})
         allvs.forEach(vItem => {
             const [where, what] = vItem.getAttribute("v").split("-");
+            console.log({where}, {what})
             if (what in props) {
                 vItem[where] = props[what];
             }
@@ -112,7 +138,7 @@
 
     function update_data_and_subscribers_with_key(subscription_key, key, new_data){
         const data = subscriptions[subscription_key];
-        console.log(data)
+        console.log({data})
         const subscribed_elements = document.querySelectorAll(`[subscription-key=${subscription_key}]`);
         data[key] = new_data;
         const props = {[key]: new_data}
@@ -139,10 +165,10 @@
     const subscriptions = {};
 
     const people = [
-        {name: 'John', age: 42, "subscription-key": "kerry"},
-        {name: 'jp', age: 13, "subscription-key": "jon"},
-        {name: 'brad', age: 32, "subscription-key": "dufe"},
-        {name: 'gt', age: 56, "subscription-key": "lego"},
+        {name: 'John', age: 42, "subscription-key": "kerry", list: [{listItem: "laundry", "subscription-key": 'poop'}, {listItem: "perk"}]},
+        {name: 'jp', age: 13, "subscription-key": "jon", list: [{listItem: "laundry"}, {listItem: "perk"}]},
+        {name: 'brad', age: 32, "subscription-key": "dufe", list: [{listItem: "laundry"}, {listItem: "perk"}]},
+        {name: 'gt', age: 56, "subscription-key": "lego", list: [{listItem: "laundry"}, {listItem: "perk"}]},
     ];
 
 
